--- a/tutorial_1_spikegen.ipynb
+++ b/tutorial_1_spikegen.ipynb
@@ -90,16 +90,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "jxLoYgkhobYw",
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting snntorch\n",
+      "  Using cached snntorch-0.6.1-py2.py3-none-any.whl (104 kB)\n",
+      "Collecting torch>=1.1.0\n",
+      "  Using cached torch-2.0.0-cp311-cp311-win_amd64.whl (172.3 MB)\n",
+      "Collecting pandas\n",
+      "  Using cached pandas-1.5.3-cp311-cp311-win_amd64.whl (10.3 MB)\n",
+      "Collecting matplotlib\n",
+      "  Using cached matplotlib-3.7.1-cp311-cp311-win_amd64.whl (7.6 MB)\n",
+      "Requirement already satisfied: numpy>=1.17 in c:\\python311\\lib\\site-packages (from snntorch) (1.24.2)\n",
+      "Collecting filelock\n",
+      "  Using cached filelock-3.10.0-py3-none-any.whl (9.9 kB)\n",
+      "Requirement already satisfied: typing-extensions in c:\\python311\\lib\\site-packages (from torch>=1.1.0->snntorch) (4.5.0)\n",
+      "Requirement already satisfied: sympy in c:\\python311\\lib\\site-packages (from torch>=1.1.0->snntorch) (1.11.1)\n",
+      "Requirement already satisfied: networkx in c:\\python311\\lib\\site-packages (from torch>=1.1.0->snntorch) (3.0)\n",
+      "Collecting jinja2\n",
+      "  Using cached Jinja2-3.1.2-py3-none-any.whl (133 kB)\n",
+      "Collecting contourpy>=1.0.1\n",
+      "  Using cached contourpy-1.0.7-cp311-cp311-win_amd64.whl (162 kB)\n",
+      "Collecting cycler>=0.10\n",
+      "  Using cached cycler-0.11.0-py3-none-any.whl (6.4 kB)\n",
+      "Collecting fonttools>=4.22.0\n",
+      "  Using cached fonttools-4.39.2-py3-none-any.whl (1.0 MB)\n",
+      "Collecting kiwisolver>=1.0.1\n",
+      "  Using cached kiwisolver-1.4.4-cp311-cp311-win_amd64.whl (55 kB)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\dell\\appdata\\roaming\\python\\python311\\site-packages (from matplotlib->snntorch) (23.0)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\python311\\lib\\site-packages (from matplotlib->snntorch) (9.4.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\python311\\lib\\site-packages (from matplotlib->snntorch) (3.0.9)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\dell\\appdata\\roaming\\python\\python311\\site-packages (from matplotlib->snntorch) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\python311\\lib\\site-packages (from pandas->snntorch) (2022.7.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\dell\\appdata\\roaming\\python\\python311\\site-packages (from python-dateutil>=2.7->matplotlib->snntorch) (1.16.0)\n",
+      "Collecting MarkupSafe>=2.0\n",
+      "  Using cached MarkupSafe-2.1.2-cp311-cp311-win_amd64.whl (16 kB)\n",
+      "Requirement already satisfied: mpmath>=0.19 in c:\\python311\\lib\\site-packages (from sympy->torch>=1.1.0->snntorch) (1.3.0)\n",
+      "Installing collected packages: MarkupSafe, kiwisolver, fonttools, filelock, cycler, contourpy, pandas, matplotlib, jinja2, torch, snntorch\n",
+      "Successfully installed MarkupSafe-2.1.2 contourpy-1.0.7 cycler-0.11.0 filelock-3.10.0 fonttools-4.39.2 jinja2-3.1.2 kiwisolver-1.4.4 matplotlib-3.7.1 pandas-1.5.3 snntorch-0.6.1 torch-2.0.0\n"
+     ]
+    }
+   ],
    "source": [
-    "!pip install snntorch"
+    "!pip install snntorch --user"
    ]
   },
   {
@@ -1512,7 +1554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
